# llm-watsonx

./: README.md  llm_watsonx.py  pyproject.toml
